fixed menu cutting off on mobile, changed button text color

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -24,7 +24,6 @@ a {
     flex-wrap: wrap;
     flex-direction: column;
     align-content: center;
-    justify-content: center;
     background-color: #05445E;
 }
 
@@ -75,6 +74,7 @@ a {
     margin: 10px;
     border-radius: 10px;
     background-color: darkcyan;
+    color:white;
 }
 
 .menu-section {
